dev/mysql-pv-pvc.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: dev
spec:
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.5
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: dev
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: dev
spec:
  selector:
    matchLabels:
      app: wordpress
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:php8.0-fpm
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: wordpress-persistent-storage
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: dev
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9000
      nodePort: 30080
  selector:
    app: wordpress
